bin/tests/errors/sema/sema_err_empty_enum.swg
#global fileprivate

enum I: u8 {} // swc-expected-error {{sema_err_empty_enum}}
